Move GL implementations into a folder.

--- a/Kirin/Kirin.vcxproj
+++ b/Kirin/Kirin.vcxproj
@@ -213,12 +213,12 @@
     <ClCompile Include="common\Standard.c" />
     <ClCompile Include="common\Time.c" />
     <ClCompile Include="common\View.c" />
-    <ClCompile Include="platform\DrawBackendGL.c" />
     <ClCompile Include="platform\Draw.c" />
-    <ClCompile Include="platform\DrawBackendShaderGL.c" />
+    <ClCompile Include="platform\gl\DrawBackendGL.c" />
+    <ClCompile Include="platform\gl\DrawBackendShaderGL.c" />
+    <ClCompile Include="platform\gl\WindowBackendGL.c" />
     <ClCompile Include="platform\Mesh.c" />
     <ClCompile Include="platform\Shader.c" />
-    <ClCompile Include="platform\WindowBackendGL.c" />
     <ClCompile Include="platform\SDL2Input.c" />
     <ClCompile Include="platform\Window.c" />
     <ClCompile Include="thirdparty\glad\glad.c" />
@@ -237,13 +237,13 @@
     <ClInclude Include="common\Time.h" />
     <ClInclude Include="common\View.h" />
     <ClInclude Include="platform\DrawBackend.h" />
-    <ClInclude Include="platform\DrawBackendGL.h" />
     <ClInclude Include="platform\Draw.h" />
-    <ClInclude Include="platform\DrawBackendShaderGL.h" />
+    <ClInclude Include="platform\gl\DrawBackendGL.h" />
+    <ClInclude Include="platform\gl\DrawBackendShaderGL.h" />
+    <ClInclude Include="platform\gl\WindowBackendGL.h" />
     <ClInclude Include="platform\Mesh.h" />
     <ClInclude Include="platform\Shader.h" />
     <ClInclude Include="platform\WindowBackend.h" />
-    <ClInclude Include="platform\WindowBackendGL.h" />
     <ClInclude Include="platform\SDL2Input.h" />
     <ClInclude Include="platform\Window.h" />
     <ClInclude Include="thirdparty\glad\glad.h" />
