--- a/Kirin/Kirin.vcxproj
+++ b/Kirin/Kirin.vcxproj
@@ -216,7 +216,7 @@
     <ClCompile Include="platform\Draw.c" />
     <ClCompile Include="platform\gl\CommonGL.c" />
     <ClCompile Include="platform\gl\DrawBackendGL.c" />
-    <ClCompile Include="platform\gl\DrawBackendShaderGL.c" />
+    <ClCompile Include="platform\gl\ShaderGL.c" />
     <ClCompile Include="platform\gl\MeshGL.c" />
     <ClCompile Include="platform\gl\WindowBackendGL.c" />
     <ClCompile Include="platform\Mesh.c" />
@@ -242,7 +242,7 @@
     <ClInclude Include="platform\Draw.h" />
     <ClInclude Include="platform\gl\CommonGL.h" />
     <ClInclude Include="platform\gl\DrawBackendGL.h" />
-    <ClInclude Include="platform\gl\DrawBackendShaderGL.h" />
+    <ClInclude Include="platform\gl\ShaderGL.h" />
     <ClInclude Include="platform\gl\MeshGL.h" />
     <ClInclude Include="platform\gl\WindowBackendGL.h" />
     <ClInclude Include="platform\Mesh.h" />
