--- a/Kirin/Kirin.vcxproj.filters
+++ b/Kirin/Kirin.vcxproj.filters
@@ -92,6 +92,12 @@
     <ClCompile Include="platform\gl\CommonGL.c">
       <Filter>platform\gl</Filter>
     </ClCompile>
+    <ClCompile Include="platform\ConstantBuffer.c">
+      <Filter>platform</Filter>
+    </ClCompile>
+    <ClCompile Include="platform\gl\ConstantBufferGL.c">
+      <Filter>platform\gl</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common\Color.h">
@@ -170,6 +176,12 @@
       <Filter>platform\gl</Filter>
     </ClInclude>
     <ClInclude Include="platform\gl\CommonGL.h">
+      <Filter>platform\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="platform\ConstantBuffer.h">
+      <Filter>platform</Filter>
+    </ClInclude>
+    <ClInclude Include="platform\gl\ConstantBufferGL.h">
       <Filter>platform\gl</Filter>
     </ClInclude>
   </ItemGroup>
