Move drawing related files to a new "draw" root folder.

--- a/Kirin/Kirin.vcxproj
+++ b/Kirin/Kirin.vcxproj
@@ -213,16 +213,16 @@
     <ClCompile Include="common\Standard.c" />
     <ClCompile Include="common\Time.c" />
     <ClCompile Include="common\View.c" />
-    <ClCompile Include="platform\ConstantBuffer.c" />
-    <ClCompile Include="platform\Draw.c" />
-    <ClCompile Include="platform\gl\CommonGL.c" />
-    <ClCompile Include="platform\gl\ConstantBufferGL.c" />
-    <ClCompile Include="platform\gl\DrawBackendGL.c" />
-    <ClCompile Include="platform\gl\ShaderGL.c" />
-    <ClCompile Include="platform\gl\MeshGL.c" />
+    <ClCompile Include="draw\ConstantBuffer.c" />
+    <ClCompile Include="draw\Draw.c" />
+    <ClCompile Include="draw\gl\CommonGL.c" />
+    <ClCompile Include="draw\gl\ConstantBufferGL.c" />
+    <ClCompile Include="draw\gl\DrawBackendGL.c" />
+    <ClCompile Include="draw\gl\MeshGL.c" />
+    <ClCompile Include="draw\gl\ShaderGL.c" />
+    <ClCompile Include="draw\Mesh.c" />
+    <ClCompile Include="draw\Shader.c" />
     <ClCompile Include="platform\gl\WindowBackendGL.c" />
-    <ClCompile Include="platform\Mesh.c" />
-    <ClCompile Include="platform\Shader.c" />
     <ClCompile Include="platform\SDL2Input.c" />
     <ClCompile Include="platform\Window.c" />
     <ClCompile Include="thirdparty\glad\glad.c" />
@@ -240,17 +240,17 @@
     <ClInclude Include="common\Standard.h" />
     <ClInclude Include="common\Time.h" />
     <ClInclude Include="common\View.h" />
-    <ClInclude Include="platform\ConstantBuffer.h" />
-    <ClInclude Include="platform\DrawBackend.h" />
-    <ClInclude Include="platform\Draw.h" />
-    <ClInclude Include="platform\gl\CommonGL.h" />
-    <ClInclude Include="platform\gl\ConstantBufferGL.h" />
-    <ClInclude Include="platform\gl\DrawBackendGL.h" />
-    <ClInclude Include="platform\gl\ShaderGL.h" />
-    <ClInclude Include="platform\gl\MeshGL.h" />
+    <ClInclude Include="draw\ConstantBuffer.h" />
+    <ClInclude Include="draw\Draw.h" />
+    <ClInclude Include="draw\DrawBackend.h" />
+    <ClInclude Include="draw\gl\CommonGL.h" />
+    <ClInclude Include="draw\gl\ConstantBufferGL.h" />
+    <ClInclude Include="draw\gl\DrawBackendGL.h" />
+    <ClInclude Include="draw\gl\MeshGL.h" />
+    <ClInclude Include="draw\gl\ShaderGL.h" />
+    <ClInclude Include="draw\Mesh.h" />
+    <ClInclude Include="draw\Shader.h" />
     <ClInclude Include="platform\gl\WindowBackendGL.h" />
-    <ClInclude Include="platform\Mesh.h" />
-    <ClInclude Include="platform\Shader.h" />
     <ClInclude Include="platform\WindowBackend.h" />
     <ClInclude Include="platform\SDL2Input.h" />
     <ClInclude Include="platform\Window.h" />
