--- a/Kirin/Kirin.vcxproj.filters
+++ b/Kirin/Kirin.vcxproj.filters
@@ -19,6 +19,12 @@
     <Filter Include="platform\gl">
       <UniqueIdentifier>{1075e276-b817-44ac-b178-b38eaed0fc76}</UniqueIdentifier>
     </Filter>
+    <Filter Include="draw">
+      <UniqueIdentifier>{89166bc8-f040-454b-a53b-0484bfcb9cc5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="draw\gl">
+      <UniqueIdentifier>{05ef2797-6851-4343-a113-7341c5b781a6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="..\SDL2\lib\x64\SDL2.dll">
@@ -62,41 +68,41 @@
     <ClCompile Include="common\View.c">
       <Filter>common</Filter>
     </ClCompile>
-    <ClCompile Include="platform\Draw.c">
-      <Filter>platform</Filter>
-    </ClCompile>
-    <ClCompile Include="platform\Shader.c">
-      <Filter>platform</Filter>
-    </ClCompile>
     <ClCompile Include="thirdparty\glad\glad.c">
       <Filter>thirdparty\glad</Filter>
     </ClCompile>
     <ClCompile Include="common\BinWriter.c">
       <Filter>common</Filter>
     </ClCompile>
-    <ClCompile Include="platform\Mesh.c">
-      <Filter>platform</Filter>
-    </ClCompile>
-    <ClCompile Include="platform\gl\DrawBackendGL.c">
-      <Filter>platform\gl</Filter>
-    </ClCompile>
-    <ClCompile Include="platform\gl\ShaderGL.c">
-      <Filter>platform\gl</Filter>
-    </ClCompile>
     <ClCompile Include="platform\gl\WindowBackendGL.c">
       <Filter>platform\gl</Filter>
     </ClCompile>
-    <ClCompile Include="platform\gl\MeshGL.c">
-      <Filter>platform\gl</Filter>
+    <ClCompile Include="draw\ConstantBuffer.c">
+      <Filter>draw</Filter>
     </ClCompile>
-    <ClCompile Include="platform\gl\CommonGL.c">
-      <Filter>platform\gl</Filter>
+    <ClCompile Include="draw\Draw.c">
+      <Filter>draw</Filter>
     </ClCompile>
-    <ClCompile Include="platform\ConstantBuffer.c">
-      <Filter>platform</Filter>
+    <ClCompile Include="draw\Mesh.c">
+      <Filter>draw</Filter>
     </ClCompile>
-    <ClCompile Include="platform\gl\ConstantBufferGL.c">
-      <Filter>platform\gl</Filter>
+    <ClCompile Include="draw\Shader.c">
+      <Filter>draw</Filter>
+    </ClCompile>
+    <ClCompile Include="draw\gl\ConstantBufferGL.c">
+      <Filter>draw\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="draw\gl\DrawBackendGL.c">
+      <Filter>draw\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="draw\gl\MeshGL.c">
+      <Filter>draw\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="draw\gl\ShaderGL.c">
+      <Filter>draw\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="draw\gl\CommonGL.c">
+      <Filter>draw\gl</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -142,15 +148,6 @@
     <ClInclude Include="platform\WindowBackend.h">
       <Filter>platform</Filter>
     </ClInclude>
-    <ClInclude Include="platform\DrawBackend.h">
-      <Filter>platform</Filter>
-    </ClInclude>
-    <ClInclude Include="platform\Draw.h">
-      <Filter>platform</Filter>
-    </ClInclude>
-    <ClInclude Include="platform\Shader.h">
-      <Filter>platform</Filter>
-    </ClInclude>
     <ClInclude Include="thirdparty\glad\glad.h">
       <Filter>thirdparty\glad</Filter>
     </ClInclude>
@@ -160,29 +157,38 @@
     <ClInclude Include="common\BinWriter.h">
       <Filter>common</Filter>
     </ClInclude>
-    <ClInclude Include="platform\Mesh.h">
-      <Filter>platform</Filter>
-    </ClInclude>
-    <ClInclude Include="platform\gl\DrawBackendGL.h">
-      <Filter>platform\gl</Filter>
-    </ClInclude>
-    <ClInclude Include="platform\gl\ShaderGL.h">
-      <Filter>platform\gl</Filter>
-    </ClInclude>
     <ClInclude Include="platform\gl\WindowBackendGL.h">
       <Filter>platform\gl</Filter>
     </ClInclude>
-    <ClInclude Include="platform\gl\MeshGL.h">
-      <Filter>platform\gl</Filter>
+    <ClInclude Include="draw\ConstantBuffer.h">
+      <Filter>draw</Filter>
     </ClInclude>
-    <ClInclude Include="platform\gl\CommonGL.h">
-      <Filter>platform\gl</Filter>
+    <ClInclude Include="draw\Draw.h">
+      <Filter>draw</Filter>
     </ClInclude>
-    <ClInclude Include="platform\ConstantBuffer.h">
-      <Filter>platform</Filter>
+    <ClInclude Include="draw\DrawBackend.h">
+      <Filter>draw</Filter>
     </ClInclude>
-    <ClInclude Include="platform\gl\ConstantBufferGL.h">
-      <Filter>platform\gl</Filter>
+    <ClInclude Include="draw\Mesh.h">
+      <Filter>draw</Filter>
+    </ClInclude>
+    <ClInclude Include="draw\Shader.h">
+      <Filter>draw</Filter>
+    </ClInclude>
+    <ClInclude Include="draw\gl\ConstantBufferGL.h">
+      <Filter>draw\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="draw\gl\DrawBackendGL.h">
+      <Filter>draw\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="draw\gl\MeshGL.h">
+      <Filter>draw\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="draw\gl\ShaderGL.h">
+      <Filter>draw\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="draw\gl\CommonGL.h">
+      <Filter>draw\gl</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
